--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "SET NODE_ENV=production && node server",
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/app.ts",
+    "tool": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/testScripts/testTweet.ts"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,13 @@
     "dotenv": "^16.0.2",
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.20",
+    "sequelize": "^6.22.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
+    "twitter-api-sdk": "^1.1.0",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/node-schedule": "^2.1.0"
   }
 }
